--- a/app/src/main/res/layout/ui_player.xml
+++ b/app/src/main/res/layout/ui_player.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_ui_player"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -37,7 +36,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/seekbar" />
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <com.omid.musicplayer.ui.customView.customFonts.IranSansTextView
             android:id="@+id/singer_name"
             android:layout_width="@dimen/_0dp"
             android:layout_height="wrap_content"
@@ -62,7 +61,7 @@
             app:layout_constraintStart_toEndOf="@id/img_song"
             app:layout_constraintTop_toBottomOf="@id/seekbar" />
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <com.omid.musicplayer.ui.customView.customFonts.IranSansTextView
             android:id="@+id/song_name"
             android:layout_width="@dimen/_0dp"
             android:layout_height="wrap_content"
@@ -119,7 +118,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <com.omid.musicplayer.ui.customView.customFonts.IranSansTextView
             android:id="@+id/up_singer_name"
             android:layout_width="@dimen/_0dp"
             android:layout_height="wrap_content"
@@ -143,7 +142,7 @@
             app:layout_constraintStart_toEndOf="@id/img_up_player"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <com.omid.musicplayer.ui.customView.customFonts.IranSansTextView
             android:id="@+id/up_song_name"
             android:layout_width="@dimen/_0dp"
             android:layout_height="wrap_content"
