--- a/app/src/main/res/layout/fragment_albums_by_id_list.xml
+++ b/app/src/main/res/layout/fragment_albums_by_id_list.xml
@@ -30,7 +30,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:tint="@color/silver" />
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <com.omid.musicplayer.ui.customView.customFonts.IranSansTextView
                 android:id="@+id/name_album"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
