--- a/app/src/main/res/layout/recent_artist_row.xml
+++ b/app/src/main/res/layout/recent_artist_row.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <com.omid.musicplayer.ui.customView.customFonts.IranSansTextView
         android:id="@+id/artist_name_recent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
