--- a/app/src/main/res/layout/up_sliding_layout.xml
+++ b/app/src/main/res/layout/up_sliding_layout.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cl_up_sliding"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/nero_7">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/main_toolbar"
@@ -20,30 +21,20 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/title_toolbar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_0dp"
+                android:layout_height="@dimen/_0dp"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_18sp"
+                android:gravity="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@id/menu"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/search"
-                android:layout_width="@dimen/_30dp"
-                android:layout_height="@dimen/_30dp"
-                android:layout_marginEnd="@dimen/_8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/search"
-                app:tint="@color/white" />
-
-            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/menu"
-                android:layout_width="@dimen/_30dp"
-                android:layout_height="@dimen/_30dp"
+                android:layout_width="@dimen/_28dp"
+                android:layout_height="@dimen/_28dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/title_toolbar"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -61,11 +52,22 @@
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="@dimen/_0dp"
         android:layout_height="@dimen/_0dp"
+        android:visibility="visible"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
         app:navGraph="@navigation/nav_graph" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_search"
+        android:layout_width="@dimen/_0dp"
+        android:visibility="gone"
+        android:layout_height="@dimen/_0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
