--- a/app/src/main/res/layout/up_sliding_layout.xml
+++ b/app/src/main/res/layout/up_sliding_layout.xml
@@ -23,9 +23,9 @@
                 android:id="@+id/title_toolbar"
                 android:layout_width="@dimen/_0dp"
                 android:layout_height="@dimen/_0dp"
+                android:gravity="center"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_18sp"
-                android:gravity="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/menu"
@@ -63,8 +63,18 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_search"
         android:layout_width="@dimen/_0dp"
-        android:visibility="gone"
         android:layout_height="@dimen/_0dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
+
+    <ProgressBar
+        android:id="@+id/pb_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
